RESOLVED FIXED115814
Safari unexpectedly quits with invalid message from the web process with message ID 0x323002f (WebPageProxy.DecidePolicyForNavigationAction)
https://bugs.webkit.org/show_bug.cgi?id=115814
Summary Safari unexpectedly quits with invalid message from the web process with mess...
Anders Carlsson
Reported 2013-05-08 11:57:38 PDT
Safari unexpectedly quits with invalid message from the web process with message ID 0x323002f (WebPageProxy.DecidePolicyForNavigationAction)
Attachments
Patch (2.07 KB, patch)
2013-05-08 12:06 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-05-08 12:06:22 PDT
Andreas Kling
Comment 2 2013-05-08 12:59:57 PDT
Comment on attachment 201090 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=201090&action=review > Source/WebKit2/WebProcess/WebProcess.cpp:244 > + connection->setOnlySendMessagesAsDispatchWhenWaitingForSyncReplyWhenProcessingSuchAMessage(true); Mhm.
Anders Carlsson
Comment 3 2013-05-08 13:05:46 PDT
Note You need to log in before you can comment on or make changes to this bug.