Safari unexpectedly quits with invalid message from the web process with message ID 0x323002f (WebPageProxy.DecidePolicyForNavigationAction) https://bugs.webkit.org/show_bug.cgi?id=115814 <rdar://problem/12331258>

Reviewed by Andreas Kling.

To ensure that any asynchronous messages are delivered to the UI process before
synchronous messages (except when doing so would lead to a deadlock), Call
setOnlySendMessagesAsDispatchWhenWaitingForSyncReplyWhenProcessingSuchAMessage on the UI process connections.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeConnection):

Canonical link: https://commits.webkit.org/134223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149762 268f45cc-cd09-0410-ab3c-d52691b4dbfc